# sphere-ai

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
backend/: requirements.txt
backend/app/: main.py
data/: providers.json
docs/: ROADMAP.md
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/health/: route.ts
src/node/: index.js
src/python/: __init__.py  app.py
tests/: conftest.py  test_node_app.js  test_python_app.py
